<resources>
    <string name="app_name">DnDApp</string>

    <string name="name">Name</string>
    <string name="characterClass">Class</string>
    <string name="level">Level</string>
    <string name="characteristics">Characteristics</string>
    <string name="strength">Strength</string>
    <string name="dexterity">Dexterity</string>
    <string name="constitution">Constitution</string>
    <string name="intelligence">Intelligence</string>
    <string name="wisdom">Wisdom</string>
    <string name="charisma">Charisma</string>
    <string name="create_your_character">Create your character</string>
    <string name="level_number">Level: %1$d</string>

    <string name="error_character_create_name_required">Name is required</string>
    <string name="error_character_create_level_required">Level is required</string>
    <string name="error_character_create_strength_required">Strength is required</string>
    <string name="error_character_create_dexterity_required">Dexterity is required</string>
    <string name="error_character_create_constitution_required">Constitution is required</string>
    <string name="error_character_create_intelligence_required">Intelligence is required</string>
    <string name="error_character_create_wisdom_required">Wisdom is required</string>
    <string name="error_character_create_charisma_required">Charisma is required</string>
    <string name="error_character_create_field_required">This field is required</string>
</resources>
