<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.CharacterCreateFragment"
    tools:ignore="Autofill">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="@dimen/default_margin"
            android:paddingLeft="@dimen/default_margin"
            android:paddingTop="@dimen/default_margin"
            android:paddingEnd="@dimen/default_margin"
            android:paddingRight="@dimen/default_margin">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/create_your_character"
                android:textSize="@dimen/header_text_size" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true">

                <EditText
                    android:id="@+id/character_name_input"
                    style="@style/DndAppEditText"
                    android:hint="@string/name" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true">

                <EditText
                    android:id="@+id/character_level_input"
                    style="@style/DndAppNumberEditText"
                    android:hint="@string/level" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/half_margin"
                android:text="@string/characterClass"
                android:textSize="@dimen/label_text_size" />

            <Spinner
                android:id="@+id/character_class_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/default_margin"
                android:focusable="true"
                android:focusableInTouchMode="true" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/half_margin"
                android:text="@string/characteristics"
                android:textSize="@dimen/label_text_size" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/DndAppCharacteristicColumn"
                    app:errorEnabled="true">

                    <EditText
                        android:id="@+id/character_strength_input"
                        style="@style/DndAppNumberEditText"
                        android:hint="@string/strength" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/DndAppCharacteristicColumn"
                    app:errorEnabled="true">

                    <EditText
                        android:id="@+id/character_intelligence_input"
                        style="@style/DndAppNumberEditText"
                        android:hint="@string/intelligence" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/DndAppCharacteristicColumn"
                    app:errorEnabled="true">

                    <EditText
                        android:id="@+id/character_dexterity_input"
                        style="@style/DndAppNumberEditText"
                        android:hint="@string/dexterity" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/DndAppCharacteristicColumn"
                    app:errorEnabled="true">

                    <EditText
                        android:id="@+id/character_wisdom_input"
                        style="@style/DndAppNumberEditText"
                        android:hint="@string/wisdom" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/DndAppCharacteristicColumn"
                    app:errorEnabled="true">

                    <EditText
                        android:id="@+id/character_constitution_input"
                        style="@style/DndAppNumberEditText"
                        android:hint="@string/constitution" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/DndAppCharacteristicColumn"
                    app:errorEnabled="true">

                    <EditText
                        android:id="@+id/character_charisma_input"
                        style="@style/DndAppNumberEditText"
                        android:hint="@string/charisma" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/character_create_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="@dimen/default_margin"
        android:src="@drawable/ic_check_white_24dp" />
</FrameLayout>